# soul-client

./: .gitignore  package-lock.json  package.json
.github/workflows/: build.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  config.rs  downloader.rs  launcher.rs  lib.rs  main.rs
