[package]
name = "soulclient"
version = "1.0.0"
description = "SoulClient - Minecraft Launcher"
authors = ["SoulClient"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
sha1 = "0.10"
hex = "0.4"
zip = "2"
uuid = { version = "1", features = ["v4", "v3"] }
open = "5"
dirs = "5"

[lib]
name = "soulclient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
